fix some bags and all lombok